# orm-examples

./: .gitignore  README.md
csharp/dapper/: DapperORM.sln
csharp/entityframework/: Program.cs  ReadMe.md  Startup.cs  YugaByteStore.csproj  appsettings.json
golang/gorm/: .project  README.md  build-and-run.sh
java/ebean/: ReadMe.md
java/ebeans/: ReadMe.md  build.sbt
java/ebeans/conf/: routes  (+1 more)
java/hibernate/: .gitignore  README.md  pom.xml
java/jooq/: README.md  pom.xml
java/mybatis/: README.md  pom.xml
java/northwind-hibernate/: README.md  build.xml  pom.xml  schema-export.sql  working-notes
java/spring/: README.md  pom.xml
node/prisma/: .env  .gitignore  README.md  app.js  package.json
node/sequelize/: .gitignore  README.md  app.js  package.json
php/laravel/: .env  .env.example  Laravel.md  README.md
python/django/: README.md  manage.py  requirements.txt
python/sqlalchemy/: README.md  requirements.txt
ruby/ror/: .gitignore  Gemfile  README.md
rust/diesel/: .env  Cargo.toml  README.md  Rocket.toml  diesel.toml
rust/diesel/migrations/2019-06-25-084602_users/: up.sql
rust/diesel/migrations/2019-06-25-085257_products/: down.sql  up.sql
rust/diesel/migrations/2019-06-25-090029_orders/: down.sql  up.sql
rust/diesel/migrations/2019-06-25-090044_order_lines/: down.sql  up.sql
rust/diesel/src/: api.rs  db.rs  main.rs  order.rs  order_api.rs  product.rs  product_api.rs  schema.rs  user.rs  user_api.rs
sequelize-app/: .sequelizerc  README.md  app.js  package-lock.json  package.json
sequelize-app/config/: config.json
spring/: README.md
(+282 files in other folders)
