[package]
name = "yugadiesel"
version = "0.1.0"
authors = ["svranesevic <svranesevic@users.noreply.github.com>"]
edition = "2018"

[dependencies]
dotenv = "0.14.1"
log = "0.4.8"
rocket = "0.4.7"
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.0.14", features = ["serde"]}
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "1.4.0"
num-traits = "0.2.8"
